src/CSS/index.css
/* ... */
.navbar-toggler{
  width: 5em;
  font-style: oblique;
  opacity: 0.6;
  padding-right: 2em;
  padding-top: 1em;
  border-radius: 100%;
  border-style: none;
  box-shadow: none;
}

.navbar-toggler:focus{
  border-style: none;
  box-shadow: none;
}

.navbar-toggler:hover{
opacity: 0.2;

}



.nav-img{
  max-width:10vw;
  max-height: 10vh;
}

/* .sig-img{
  max-width: 14vw;
  min-width: 120px;
  max-height: 19vh;
  min-height: 8vh;
  height: auto;
  mix-blend-mode: difference;
} */

.sig-head{
  font-family: "CooperHewitt-Medium", "Triplex", sans-serif;
  color: rgb(0, 0, 0);
  font-size: 2vh;

  /* text-shadow: 1px 1px 2px #ffffff; */
}

.title{
  font-family: "futura";
  text-transform: uppercase;
  text-align: left;
  font-style: oblique;
}

#title2{
  font-family: "Alfarn";
}

.title-text{
  font-size: 4.5vw;
  color:rgb(50, 29, 14);
  /* text-shadow: 2px 2px 3px#b1b4c6; */
  text-align: center;
  position: relative;
  top: -6vh;
  left: 10vw;
  z-index: 0;

}


.main-page-buttons {
  height: 15vh;
  min-width: 200px;
  min-height: 160px;
  padding: 4vw;
  filter: contrast(1.2) hue-rotate(0deg) grayscale(85%);
opacity: .9;
  
}

.main-page-buttons:hover {
  transform: scale(.97);
  color: green;
}


.fonted-links{
  font-size: 3.5vh;
  /* font-family: "reg-text"; */
  font-weight: 200px;
  color:rgb(41, 30, 11);
  font-family: didot;

}

.carousel {

}

.carousel-caption {
  color: black;
  position: 'absolute';
    left: 'auto';
    bottom: 0;
    right: 'auto';
    padding-top: 500px;
}

.fonted-links a{
  color:rgb(29, 38, 68);

}

.fonted-links a:hover{
  color:rgba(84, 80, 108, 0.463);
  font-style: oblique;

}

.fonted {
  padding: 4vh;
  text-align: center;
  font-size: 3vh;

}

.fonted-modal {
  max-width: 100%;
  text-align: left;
  padding: 1em;

}

.reg-text{
  /* font-family: sans-serif; */
  color:rgb(37, 41, 39);
  font-weight:bold;
  font-family: "j_font";

}

.noheight {
  height: 7vw;
}
#footer {
  height:auto;
  width: 30%; 
  padding-top: 1vh;
  position: fixed;
  bottom: 0vh;
  text-align: left;
  left: 0.5em;
  z-Index: 20;

}

.testbubble{
  font-size: 50%;
  word-wrap: break-word;
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
  z-index: 3;
}



.carousel-inner{
  z-index: 10;
}


.filledsvg {
   fill:rgb(226, 0, 0);
  z-index: 0;
  margin-top: -5%;
  width: 80%;
  margin-left: 50%;
  animation: test-spin 15s infinite linear;
  pointer-events: none;

}

.subtitle {
  margin-top: 2vh;
  font-weight: lighter;
  font-size: 1.6em;
  margin: auto;
  width: 60%;

}

.svgtest {
  fill: rgb(201, 198, 184);
  fill-opacity: 10;
  width: 100%;
  z-index: 0;
  pointer-events: none;

}



#whitebutton{
  color: blue;
  background-color: white;
}

a {
  z-index: 90;

}


.thesisblogp{
  text-align: center;
  width: 90%;
  text-transform:none;
  margin-left: 5%;
  position: relative;

}


@media screen and (max-width: 5068px){
  #homebutton {
    position:fixed;
    top: 2vh;
    left:2vh;
    z-index: 90;
    opacity: 80%;
  
  }

  .JuliaG{
    letter-spacing: -2.5px;
    /* font-weight:10; */
    font-size: clamp(5vw, 1.7vw, 15vw); 
    text-align: left;
    font-weight: 700;
    min-height: 20vh;
    width: 100vw;
    mix-blend-mode:screen;
    margin: auto;
    display: inline-flex;
    /* stroke-width: 0.07%;
    stroke:rgb(255, 7, 7); */
    /* text-shadow: rgb(15, 0, 48) 1px 3px 4px;  */
    /* mix-blend-mode: multiply; */
    background-image: url("https://res.cloudinary.com/dytb4ayqj/image/upload/v1717682388/juliagheader_4_cjylmv.png");
    background-size: contain;
    background-repeat: no-repeat;
    font-family: "Futura", didot;
    color: rgb(4, 0, 27);
    padding-bottom: 20px;
  }

  #homebutton:hover {
    position:fixed;
    top: 2vh;
    left:2vh;
    z-index: 90;
    opacity: 100%;
  }
  #homebutton img {
    height: 10vw;
    }
}

@media screen and (max-width: 768px){
  .JuliaG{
    letter-spacing: -2.5px;
    /* font-weight:10; */
    font-size: clamp(5vw, 1.7vw, 15vw); 
    text-align: left;
    font-weight: 700;
    min-height: 15vh;
    width: 100vw;
    mix-blend-mode:screen;
    margin: auto;
    display: inline-flex;
    /* stroke-width: 0.07%;
    stroke:rgb(255, 7, 7); */
    /* text-shadow: rgb(15, 0, 48) 1px 3px 4px;  */
    /* mix-blend-mode: multiply; */
    background-image: url("https://res.cloudinary.com/dytb4ayqj/image/upload/v1717682219/juliagheader_3_bvsew5.png");
    background-size: contain;
    background-repeat: no-repeat;
    font-family: "Futura", didot;
    color: rgb(4, 0, 27);
    padding-bottom: 0px;
    
  }
}


.padding{
  height: 25vw;


}

.thesisblogp_image{
  font-family: "CooperHewitt-Medium";
  text-align: left;
  position: relative;
  font-size: 100%;
  margin-left: 20%;
  text-transform:none;

  margin-right: 20%;
  margin-top: 2%;

}

.postimage {
  text-align: left;
  max-height: 100%;
  max-width: 100%;
  z-index: 14;

}

#footerWeeks {
  height:auto;
  width: 100%; 
  left: 0%;
  position: fixed;
  bottom: 0vh;
  text-align: center;
  z-Index: 20;

}

#weekButton{
  background-color:#eee7bf;
  border-style: solid;
  border-color:rgb(41, 30, 11);
  color: black;
  border-top-left-radius: 20%;
  border-top-right-radius: 20%;
  font-family: 'j_font';
  padding: 10px;

}

#weekButton:hover{
  padding-top: 20px;
}

.helping{
  z-index: 90;
}


.game_image {
  width: 300px;
  padding: 10px;
}

.games_images{
  padding-left: 40px;
}

.websitevideo {
  position:relative;
  width: 80vw;
  height: 50vh;
  top: 0px;
  z-index: 90;
}


#modalImage{
  height: 30vw;
}

#modalImagePost{
  max-height: 80vh;
  max-width: 90vw;
}


.carousel-caption {
  position: relative;
  display: inline-block;
  
}

.img__img {
  vertical-align: bottom;
}

.dress {
  width: 20vw;
}

.reg{
  font-family: sans-serif;
  color:rgb(54, 43, 25);
  font-size: 1.7em;
  font-weight: lighter;
}
/* ... */

